--- a/server/package.json
+++ b/server/package.json
@@ -6,12 +6,15 @@
   "scripts": {
     "start": "nodemon server.js",
     "client": "npm start --prefix ../client",
-    "dev": "concurrently \"npm start\" \" npm run client\" "
+    "dev": "concurrently \"npm start\" \"npm run client\" "
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "joi": "^17.4.0",
     "jsonwebtoken": "^8.5.1",
